tests/baselines/reference/multiLinePropertyAccessAndArrowFunctionIndent1.errors.txt
tests/cases/compiler/multiLinePropertyAccessAndArrowFunctionIndent1.ts(1,1): error TS1108: A 'return' statement can only be used within a function body.


==== tests/cases/compiler/multiLinePropertyAccessAndArrowFunctionIndent1.ts (1 errors) ====
    return this.edit(role)
    ~~~~~~
!!! error TS1108: A 'return' statement can only be used within a function body.
        .then((role: Role) =>
            this.roleService.add(role)
                .then((data: ng.IHttpPromiseCallbackArg<Role>) => data.data));
    